# AgentEvalOps

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  package.yml
configs/: toy_failure.yaml  toy_mixed.yaml  toy_policy_violation.yaml  toy_smoke.yaml  toy_trace_limit.yaml
docs/: local-demo.md  release-checklist.md
src/agentevalops/: __init__.py  cli.py
src/agentevalops/agents/: mock_runner.py
src/agentevalops/benchmarks/toy/: __init__.py  adapter.py  scenarios.py  tasks.py
src/agentevalops/bundles/: constants.py  manifest.py  reader.py  serializers.py  validator.py  writer.py
src/agentevalops/config/: loader.py
src/agentevalops/core/: __init__.py  errors.py  protocols.py  schemas.py  types.py
src/agentevalops/evaluators/: deterministic.py
src/agentevalops/orchestration/: local.py
src/agentevalops/policy/: basic_checker.py
src/agentevalops/replay/: local.py
src/agentevalops/reports/: markdown.py
src/agentevalops/scorers/: simple.py
src/agentevalops/stores/: memory.py
tests/: test_agents.py  test_benchmarks.py  test_bundle_manifest.py  test_bundle_reader.py  test_bundle_validator.py  test_bundles.py  test_cli.py  test_cli_bundle_validation.py  test_config_loader.py  test_core_protocols.py  test_core_schemas.py  test_evaluators.py  test_example_configs.py  test_import.py  test_orchestration.py  test_policy.py  test_replay.py  test_reports.py  test_scorers.py  test_stores.py  test_toy_benchmark.py  test_toy_scenarios.py
