[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentevalops"
version = "0.1.0.dev0"
description = "Local-first, AWS-ready agent evaluation platform."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6",
]

[project.scripts]
agentevalops = "agentevalops.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentevalops"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
