[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentevalops"
version = "0.1.0"
description = "Local-first agent evaluation platform for running, recording, and replaying evaluation loops."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["agent", "evaluation", "llm", "testing", "benchmark", "ai"]
authors = [
    { name = "AgentEvalOps contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6",
    "build>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
agentevalops = "agentevalops.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentevalops"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.coverage.run]
source = ["agentevalops"]
branch = true

[tool.coverage.report]
show_missing = true
